--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -41,6 +41,30 @@
         </EditText>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="@string/frame_rate">
+        </TextView>
+        <Spinner
+            android:id="@+id/frame_rate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/frame_rates"/>
+<!--        <EditText-->
+<!--            android:id="@+id/frame_rate"-->
+<!--            android:inputType="number|numberDecimal"-->
+<!--            android:digits="0123456789"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:text="@string/frame_rate_value"-->
+<!--            android:layout_height="wrap_content">-->
+<!--        </EditText>-->
+    </LinearLayout>
+
     <CheckBox
         android:id="@+id/preview"
         android:text="@string/preview"
