--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBlack"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -27,12 +28,18 @@
                 <Button
                     android:id="@+id/button_open_front"
                     android:layout_width="match_parent"
+                    android:layout_margin="5px"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textColor="@color/colorWhite"
+                    android:background="@color/colorDark"
                     android:text="@string/open_front" />
                 <Button
                     android:id="@+id/button_close_front"
                     android:layout_width="match_parent"
+                    android:layout_margin="5px"
+                    android:textColor="@color/colorWhite"
+                    android:background="@color/colorDark"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/close_front" />
@@ -45,13 +52,19 @@
                 android:layout_alignParentBottom="true">
                 <Button
                     android:id="@+id/button_open_back"
+                    android:background="@color/colorDark"
+                    android:textColor="@color/colorWhite"
+                    android:layout_margin="5px"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/open_back" />
                 <Button
                     android:id="@+id/button_close_back"
+                    android:background="@color/colorDark"
+                    android:textColor="@color/colorWhite"
                     android:layout_width="match_parent"
+                    android:layout_margin="5px"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/close_back" />
