--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,6 +81,7 @@
 
             <TextView
                 android:layout_width="match_parent"
+                android:textColor="@color/colorWhite"
                 android:layout_height="50dp"
                 android:id="@+id/text_view" />
 
