--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_weight="0.1"
                 android:layout_alignParentBottom="true">
                 <Button
                     android:id="@+id/button_open_front"
@@ -49,6 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_weight="0.1"
                 android:layout_alignParentBottom="true">
                 <Button
                     android:id="@+id/button_open_back"
@@ -77,12 +79,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.49"
                 app:layout_constraintStart_toStartOf="parent"
+                android:layout_weight="0.8"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:textColor="@color/colorWhite"
                 android:layout_height="50dp"
+                android:layout_weight="0.1"
                 android:id="@+id/text_view" />
 
         </LinearLayout>
